no problems in project

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -401,9 +401,9 @@ nav ul li a.active::after {
 							margin-top: -6rem;
 						}
 
-						div {
+						//div {
 							// margin-top: 6rem;
-						}
+						//}
 					}
 				}
 			}
