Done for the day, stuck on this knockout text for now

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -210,7 +210,7 @@ nav ul li a.down::after {
 
 .main-window {
 	margin: unset;
-	padding: 1.2rem;
+	padding: 1rem;
 	background: $lt-grey;
 	border-radius: 1.25rem;
 	min-height: 20rem;
@@ -269,19 +269,21 @@ nav ul li a.down::after {
 }
 
 .window-content {
-	margin-top: 3rem;
+	// margin-top: 3rem;
 	// padding: 5rem 3rem 3rem 3rem;
-	
+
 	position: relative;
 	top: 50%;
 	left: 50%;
 	width: inherit;
 	height: inherit;
 	transform: translate(-50%, -50%);
+
 	div {
 		// margin-top: 3rem;
 		height: inherit;
-		margin-top: inherit;
+		// margin-top: inherit;
+
 		p {
 			margin-top: -3rem; // this line is the difference between the two.
 			font-size: large;
@@ -389,20 +391,21 @@ nav ul li a.active::after {
 					position: relative;
 					// margin: 5rem 5%;
 					padding-top: 4rem;
-					height: 75vw;
+					height: 85vw;
+
 					// background-color: rgba(0,0,0,.7);
 					div {
 						z-index: 6;
-						
+
 						// margin: 5rem 5%;
 						// font-size: large;
 						p {
 							text-align: center;
-							margin-top: -6rem;
+							margin-top: -5rem;
 						}
 
 						//div {
-							// margin-top: 6rem;
+						// margin-top: 6rem;
 						//}
 					}
 				}
@@ -410,15 +413,84 @@ nav ul li a.active::after {
 		}
 	}
 }
-.section-content{
-	padding: 3rem 4rem;
+
+.section-content {
+	padding: 5rem 4rem 4rem 4rem;
+
 	div {
-		height: 97%;
+		height: 100%;
+		padding-top: 2.5rem;
+
 		.hero {
 			padding-top: 4rem;
-		}	
+			text-align: center;
+		}
 	}
 }
+
+
+/* Clip text element */
+.clip-text {
+    // font-size: 6em;
+    font-weight: bold;
+    line-height: 1;
+    position: relative;
+    display: inline-block;
+    // margin: .25em;
+    padding: .5em .75em;
+    text-align: center;
+    /* Color fallback */
+    // color: #fff;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.clip-text:before,
+.clip-text:after {
+    position: absolute;
+    content: '';
+}
+
+/* Background */
+.clip-text:before {
+    z-index: -2;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: inherit;
+}
+
+/* Text Background (black zone) */
+.clip-text:after {
+    position: absolute;
+    z-index: -1;
+    top: .125em;
+    right: .125em;
+    bottom: .125em;
+    left: .125em;
+    background-color: #000;
+}
+
+/* Change the background position to display letter when the black zone isn't here */
+.clip-text--no-textzone:before {
+    background-position: -.75em 0;
+}
+
+.clip-text--no-textzone:after {
+    content: none;
+}
+
+/* Use Background-size cover for photo background and no-repeat background */
+.clip-text--cover,
+.clip-text--cover:before {
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+            background-size: cover;
+  background-position: 50% 50%;
+}
+
 @keyframes slideIn {
 	from {}
 
@@ -584,35 +656,74 @@ nav ul li a.active::after {
 		"A C"
 		"B C";
 	height: inherit;
-
-	.block-0{
-		grid-area: A;
-		background: red;
-		height: 100%;
-		margin-top: 1rem;
-	}
-
-	.block-1 {
-		grid-area: B;
-		height: 100%;
-		background: green;
-		margin-top: 1rem;
-		border-bottom-left-radius: 1.25rem;
-
-
-	}
-
-	.block-2 {
-		grid-area: C;
-		height: 100%;
-		background: blue;
-		border-bottom-right-radius: 1.25rem;
-		margin-top: 1rem;
-
-	}
-	// margin: 3rem 3rem 6rem 3rem;
-	margin-top: inherit;
+	padding-top: 1rem;
 }
+
+.bg-code {
+	background: url('./assets/code-small.jpg') center;
+}
+
+.block-0 {
+	grid-area: A;
+	height: 100%;
+	// margin-top: 1rem;
+	border-bottom-left-radius: 1.25rem;
+
+	// .image {
+	// 	background: url('./assets/code-small.jpg') center no-repeat;
+		// background-size: contain;
+		// margin: auto;
+		// width: 100%;
+	// 	.text {
+	// 		color: white;
+	// 		border: 4px white solid;
+	// 		mix-blend-mode: multiply;
+	// 		font: bolder 12vw monospace;
+	// 		text-align: center;
+	// 		margin: 0;
+	// 		cursor: pointer;
+	// 		transition: text-indent 0.5s;
+	// 		font-family: "Alfa Slab One", cursive;
+	// 		background-color: rgba(59, 2, 6, 1);
+	// 		outline: 4px rgba(59, 2, 6, 1) solid;
+	// 		height: 100%;
+	// 		&:hover {
+	// 			text-indent: 5px;
+	// 			transition: text-indent 0.5s;
+
+	// 			&::before {
+	// 				.text:hover::before {
+	// 					display: inline-block;
+	// 					content: "✈︎";
+	// 				}
+	// 			}
+	// 		}
+	// 	}
+	// }
+}
+
+
+.block-1 {
+	grid-area: B;
+	height: 100%;
+	background: green;
+	// margin-top: 1rem;
+	border-bottom-left-radius: 1.25rem;
+
+
+}
+
+.block-2 {
+	grid-area: C;
+	height: 100%;
+	background: blue;
+	border-bottom-right-radius: 1.25rem;
+	// margin-top: 1rem;
+
+}
+
+// margin: 3rem 3rem 6rem 3rem;
+
 
 .hide {
 	display: none;
